<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VibroDroid</string>
    <string name="accele_x_label">X</string>
    <string name="accele_y_label">Y</string>
    <string name="accele_z_label">Z</string>
    <string name="accele_r_label">R</string>
    <string name="accele_rms_label">RMS:</string>
    <string name="sensor_delay_label">Sensor Kasnjenje</string>
    <string name="save_label">Snimi očitavanje</string>
    <string name="end_label">Kraj očitavanja</string>
    <string name="save_complate">Završi snimanje</string>
    <string name="save_complated">Snimanje je uspesno zavrseno</string>
    <string name="logout_label">Odjavi se</string>
    <string name="exit_label">Izadji</string>
    <string name="start_save_label">Započni snimanje</string>
    <string name="start_save_msg">Početak Snimanja MSG</string>
    <string name="version">1.1</string>
    <string name="menu_settings">Podešavanja</string>
    <string name="acc_sensor_not_found">Akcelerometar nije pronadjen!</string>
    <string name="rms_default_value">0.00</string>
    <string name="find_equilibrium_position">Postavite uredjaj u ravnotezan polozaj</string>
    <string name="sensor_calibrated">Uredjaj je kalibrisan</string>
    <string name="wait_for_sensor_calibration">Molimo vas sacekajte da se uredjaj kalibrise.</string>
    <string name="finding_GPS">Trazenje GPS-a...</string>
    <string name="GPS_found">GPS pronadjen</string>
    <string name="measurement_started">Pocinje merenje...</string>

    <!-- Progress Dialog -->
    <string name="progress_dialog_text">Molimo vas sacekajte...</string>

    <!-- Login Activity -->
    <string name="login_title">Unesite korisnicke informacije</string>
    <string name="login_button_title">Ulogujte se</string>
    <string name="register_button_title">Registrujte se</string>
    <string name="login_username">Korisnicko ime</string>
    <string name="login_password">Lozinka</string>
    <string name="server_url">Server URL</string>
    <string name="username_missing">Niste uneli korisnicko ime</string>
    <string name="password_missing">Niste uneli lozinku</string>
    <string name="server_url_missing">Niste uneli Server URL</string>

    <!-- Register Activity -->
    <string name="register_title">Registracija</string>
    <string name="register_name">Ime</string>
    <string name="register_last_name">Prezime</string>
    <string name="register_email">Email</string>
    <string name="repeat_register_password">Potvrdite lozinku</string>
    <string name="name_missing">Niste uneli Vase ime</string>
    <string name="lastname_missing">Niste uneli Vase prezime</string>
    <string name="email_missing">Niste uneli email</string>
    <string name="confirm_password">Niste potvrdili lozinku</string>
    <string name="passwords_not_equal">Unete lozinke se ne poklapaju</string>

    <!-- Create Measurement -->
    <string name="crete_new_measurement">Kreirajte novo merenje</string>
    <string name="measurement_name">Ime merenja</string>
    <string name="measurement_description">Opis merenja</string>
    <string name="crete_measurement">Zapocnite merenje</string>
    <string name="measurement_name_missing">Niste uneli ime merenja</string>
    <string name="field_missing">Niste popunili sva polja</string>
    <string name="user_id_missing">Doslo je do greske, molimo vas ulogujte se ponovo</string>
    <string name="save_kml">Sacuvaj KML fajl</string>
    <string name="save_raw">Sacuvaj CSV fajl</string>
    <string name="unit_in_g">G</string>
    <string name="metre_per_second_square">m/s^2</string>
    <string name="horizontal">H</string>
    <string name="vertical">V</string>
    <string name="phone_orintation">Polozaj telefona:</string>
    <string name="measure_unit">Merna jedinica:</string>
    <string name="eleminate_near_ponts">Eleminisi tacke sa lokacijom u krugu od </string>
    <string name="meters">m</string>
    <string name="time_between_points">Izracunaj RMS na svakih </string>
    <string name="seconds">s</string>
    <string name="server_unavailable">Server nije trenutno dostupan...</string>
    <string name="measurement_creation_failed">Doslo je do greske prilikom kreiranja merenja, molimo vas pokusajte ponovo</string>
    <string name="measurement_creation_success">Merenje je uspesno kreirano</string>

</resources>