<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:title="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        />
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation= "5dp"
        >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="76dp"
            android:layout_marginRight="76dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/login_username"
                    android:textSize="12sp"
                    android:textColor="@color/primary_text"/>

                <TextView
                    android:id="@+id/username_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="2dp"
                    android:textStyle="italic"
                    android:text="@string/login_username"
                    android:textSize="14sp"
                    android:textColor="@color/primary_text"/>

            </LinearLayout>



            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/measurement_name"
                android:layout_marginTop="2dp"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:singleLine="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="text"
                android:hint="@string/measurement_name"
                android:textColor="@android:color/black"
              />



            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/measurement_description"
                android:layout_marginTop="2dp"
                android:layout_width="fill_parent"
                android:layout_height="90dp"
                android:singleLine="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="text"
                android:hint="@string/measurement_description"
                android:textColor="@android:color/black"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:layout_marginRight="68dp"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:text="@string/save_kml"
                android:textSize="12sp"
                android:textColor="@color/primary_text"/>

            <CheckBox
                android:id="@+id/save_kml_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:text="@string/save_raw"
                android:textSize="12sp"
                android:textColor="@color/primary_text"/>

            <CheckBox
                android:id="@+id/save_raw_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:layout_marginRight="68dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/measure_unit"
                android:text="@string/measure_unit"
                android:textSize="13sp"
                android:textColor="@color/primary_text"/>

            <RadioGroup
                android:id="@+id/measure_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/unit_in_g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:checked="true"
                    style="@style/pass_filter"
                    android:text="@string/unit_in_g"/>

                <RadioButton
                    android:id="@+id/unit_in_metre_per_seconds_square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/pass_filter"
                    android:text="@string/metre_per_second_square"/>

            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:layout_marginRight="68dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/phone_orientation"
                android:text="@string/phone_orintation"
                android:textSize="13sp"
                android:textColor="@color/primary_text"/>

            <RadioGroup
                android:id="@+id/phone_orientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/horizontal_phone_orientation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:checked="true"
                    style="@style/pass_filter"
                    android:text="@string/horizontal"/>

                <RadioButton
                    android:id="@+id/vertical_phone_orientation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/pass_filter"
                    android:text="@string/vertical"/>

            </RadioGroup>

        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:layout_marginRight="68dp"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:text="@string/eleminate_near_ponts"
                android:textSize="12sp"
                android:textColor="@color/primary_text"/>

            <CheckBox
                android:id="@+id/eleminate_near_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/start_measurement"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:text="@string/crete_measurement"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_weight="5"
            android:background="@drawable/custom_button_bg"/>

    </LinearLayout>
</android.support.v7.widget.CardView>
</ScrollView>
    </LinearLayout>